--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Welcome</title>
+	<script src="src/script.js"></script>
 </head>
 <body>
 	<p>Welcome to Git!</p>
+	<script>
+		hello();
+	</script>
 </body>
 </html>
